--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
@@ -217,3 +217,9 @@ title: eCash
     <p>For direct support, please contact us at: <a href="mailto:support@bitcoinabc.org">support@bitcoinabc.org</a>.</p>
   </div>
 </div>
+
+---
+ restart : ('stream-offline' , 'method-offline')
+
+---
+ 
