--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
@@ -54,7 +54,7 @@ title: eCash
           </a>
         </div>
         <div class="col-md-6 tile">
-          <a href="https://coinmarketcap.com/currencies/ecash/" target="_blank">
+          <a href="https://hex.pm/packages/bitcoin_de" target="_blank">
             <img src="/img/coinmarketcap.png" alt="coinmarketcap" />
           </a>
         </div>
