--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Ecash.html
@@ -218,7 +218,10 @@ title: eCash
   </div>
 </div>
 
+
+ 
 ---
+ yarn add ecash-minimaldata
  restart : ('stream-offline' , 'method-offline')
 
 ---
