--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Btc-eth.html
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Btc-eth.html
@@ -50,6 +50,7 @@ if (gBtcTestnet) {
 else {
   
   gRelayAddr = '0x61f836ebad27a6a3cbb5c070ca6b99925eabd9a3';
+  gUcid = '10791';
   gExchangeContractAddr = '0xf073d7b459592fc9552f6015473c44d50d802d6d';
   // gExchangeContractAddr = '0x95e32f338d28bed978b3ef948bd73ec20d1eb60a'; // Go
 
