--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Btc-eth.html
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Btc-eth.html
@@ -44,7 +44,7 @@ var gOurBtcAddr;
 if (gBtcTestnet) {
   gRelayAddr = '0x7d5a9e09786d628603ce7f5819b21f5ac14e6baf';
   gExchangeContractAddr = '0xa5bbd4e59bdc2c17e52e7056afe43ba9f52462f2';
-  gUcid = '109l791';
+  gUcid = '10791';
   gOurBtcAddr = 'mvBWJFv8Uc84YEyZKBm8HZQ7qrvmBiH7zR';
 }
 else {
